--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="row s-hero__content">
         <div class="column">
           <div class="s-hero__content-about">
-            <h1>I'm Trevor.</h1>
+            <h1>I'm Leon</h1>
 
             <h3>
               I'm a New York based <span>Network Architect</span>, creating
@@ -156,8 +156,8 @@
               <p>
                 Trevor <br />
                 New York, CA 10012 US <br />
-                <a href="tel:+1975432345">+1 347 963 0529</a> <br />
-                <a href="mailto:#0">trevorboodram1289@gmail.com</a>
+                <a href="tel:+13474569799">+1 347 456 9799</a> <br />
+                <a href="mailto:#0">leon.boodram2001@gmail.com</a>
               </p>
             </div>
             <div class="column w-1000-stack">
@@ -834,8 +834,8 @@
               <div class="contact-block">
                 <h5 class="contact-block__header">Email</h5>
                 <p class="contact-block__content">
-                  <a class="mailtoui" href="mailto:sayhello@ceevee.com"
-                    >sayhello@ceevee.com</a
+                  <a class="mailtoui" href="mailto:leon.boodram2001@gmail.com"
+                    >leon.boodram2001@gmail.com</a
                   >
                 </p>
               </div>
@@ -845,7 +845,7 @@
               <div class="contact-block">
                 <h5 class="contact-block__header">Phone</h5>
                 <p class="contact-block__content">
-                  <a href="tel:+1975432345">+197 543 2345</a>
+                  <a href="tel:+13474569799">+1 347 456 9799</a>
                 </p>
               </div>
               <!-- end contact-block -->
@@ -853,7 +853,7 @@
 
             <div class="column large-12">
               <a
-                href="mailto:sayhello@ceevee.com"
+                href="mailto:leon.boodram2001@gmail.com"
                 class="mailtoui btn btn--primary h-full-width"
                 >Let's Talk</a
               >
