--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8" />
-    <title>Trevor</title>
+    <title>Leon</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -154,7 +154,7 @@
               <h3>Contact Details</h3>
 
               <p>
-                Trevor <br />
+                Leon <br />
                 New York, CA 10012 US <br />
                 <a href="tel:+13474569799">+1 347 456 9799</a> <br />
                 <a href="mailto:#0">leon.boodram2001@gmail.com</a>
